--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,17 @@
 }
 
 body {
-    font-family: Univers;
     background-color: #1a1a1a; 
     color: #ffffff;
 }
 @font-face {
-  font-family: Univers; /* set name */
-  src: url(/fonts/Univers-LightUltraCondensed.otf); 
+  font-family: Univers;
+  src: url(../fonts/Univers-LightUltraCondensed.otf); 
 }
 
 
-
 .header-section {
+    font-family: Univers;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,6 +68,9 @@ body {
     line-height: 2.5;
 }
 .btn-primary {
+    font-size: 1.5rem;
+    height: auto;
+    width: auto;
     align-self: center;
     display: inline-block;
     padding: 12px 24px; 
@@ -77,10 +79,14 @@ body {
     text-decoration: none; 
     font-weight: bold;
     border-radius: 5px;
-    transition: background-color 0.3s ease; 
+    transition: background-color 0.3s ease;
+    margin: 10px; 
+    transition: transform 0.3s ease;
 }
 .btn-primary:hover {
     background-color: #fff;
+    transform: translateY(-5px);
+
 }
 .container {
     padding: 60px 20px;
@@ -177,6 +183,8 @@ body {
 }*/
 
 .main-navbar {
+    width: 100%;
+    height: 70px;
     display: flex; 
     justify-content: space-between; 
     align-items: center;
